# WinsockClientAndServer

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BoostPropertySheet.props  CMakeLists.txt  Project.sln  ProjectLibraries.props  StaticLibsPropertySheet.props  WinsockClientAndServer.sln  WinsockServerClient.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
HelperLibrary/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  GeometryStructures.h  HelperLibrary.cpp  HelperLibrary.vcxproj  HelperLibrary.vcxproj.filters  Helpers.cpp  Helpers.h  HelpersLib.sln  HelpersLib.vcxproj  HelpersLib.vcxproj.filters  LogStream.cpp  LogStream.h  ReadMe.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  helperlibrary.i-4982575c  stdafx.cpp  stdafx.h  stdafx.i-1d6ada0c
ShortcutsPanel/: WinsockClient.exe — ярлык.lnk  WinsockServer.exe — ярлык.lnk
TestCereal/: ReadMe.txt  TestCereal.cpp  TestCereal.vcxproj  TestCereal.vcxproj.filters  stdafx.cpp
WinsockClient/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  WSAClient.cpp  WSAClient.h  WinsockClient — копия.cpp  WinsockClient.cpp  WinsockClient.sln  WinsockClient.vcxproj  WinsockClient.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  stdafx.h  targetver.h
WinsockServer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CmdFabrique.h  GetGeometrySendProperFormat.cpp  GetGeometrySendProperFormat.h  GetVertexesCommand.cpp  GetVertexesCommand.h  Helpers.h  ListCommand.cpp  ListCommand.h  SendGeometryCmd_v2.cpp  SendGeometryCmd_v2.h  SendLargeFileCmd.cpp  SendLargeFileCmd.h  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  StringResponseCmd.cpp  StringResponseCmd.h  UserCommand.cpp  UserCommand.h  UserCommandNoOperation.cpp  UserCommandNoOperation.h  WSASocket.cpp  WSASocket.h  WinsockServer.cpp  WinsockServer.sln  WinsockServer.vcxproj  WinsockServer.vcxproj.filters  WinsockServerMain.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.vcxproj  main.vcxproj.filters  out.txt  server.sln  stdafx.cpp  (+2 more)
cereal-1.2.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cereal.sln  cmake_install.cmake
cereal-1.2.1/sandbox/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sandbox.vcxproj  sandbox.vcxproj.filters  sandbox_json.vcxproj  sandbox_json.vcxproj.filters  sandbox_rtti.vcxproj  sandbox_rtti.vcxproj.filters  sandbox_vs.vcxproj  sandbox_vs.vcxproj.filters
cereal-1.2.1/sandbox/sandbox_shared_lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sandbox_vs_dll.vcxproj  sandbox_vs_dll.vcxproj.filters
models/: cornell_box_multimaterial.wobj  rename.sh
tinyobjloader-master/: loader_example.cc  tiny_obj_helpers.cpp  tiny_obj_helpers.h  tiny_obj_loader.h  tinyobjloader.vcxproj
